# gdess

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  index.md  recipe_options_example.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint_and_test.yml  main.yml
ccgcrv/: README.txt  __init__.py  ccg_dates.py  ccg_filter.py  ccgcrv.py
ci/: environment.yml
co2_diag/: __init__.py  recipe_parsers.py  recipe_utils.py  strings.py
co2_diag/config/: defaults.ini  log_config.json
co2_diag/data_operation_utils/: combine.py
co2_diag/data_source/: __init__.py  cmip.py  multiset.py
co2_diag/data_sources/: __init__.py  convert.py  multiset.py  time.py
co2_diag/dataset_operations/: __init__.py  combine.py  convert.py  datasetdict.py  geographic.py  multiset.py  time.py  utils.py
co2_diag/e3sm_output/: __init__.py  calculation.py  utils.py
co2_diag/formatters/: args.py  nums.py  strings.py
doc/: build.sh
doc/template/: head.mako  (+2 more)
docs/: html_helpers.html  index.html  recipe_parsers.html
gdess/: __init__.py  html_helpers.py  recipe_parsers.py
paper/: paper.bib  paper.md
tests/: __init__.py  conftest.py  set_path_vars_for_testing.sh  test_arg_utils.py  test_cmip_collection.py  test_cmip_collection_recipes.py  test_curvefitting.py  test_e3sm_collection_recipes.py  test_formatters.py  test_graphics.py  test_multiset.py  test_obspack_surface_collection_recipes.py  test_operations.py  test_recipe_meridional.py  test_recipe_seasonal_cycles.py  test_recipe_surface_trends.py  test_recipe_utils.py  test_surface_trends_recipe.py  test_time_utils.py
(+220 files in other folders)
