[metadata]
name = e3sm_co2_diag
version = 0.0a1
description = Comparison of simulated atmospheric CO2 against observational data
long_description = file: README.md
long_description_content_type = text/markdown
author_email = daniel.kaufman@pnnl.gov

[options]
python_requires = >= 3.8
include_package_data = true
packages = find:
setup_requires =
    setuptools
install_requires =
    numpy>=1.20
    pandas>=1.1
    xarray>=0.17
    dask>=2021
    cftime>=1.4
    matplotlib>=3.3
    cartopy>=0.18
    adjusttext>=0.7.3
    intake>=0.6
    intake-esm>=2021
    gcsfs>=0.8
    scipy>=1.5
tests_require =
    pytest
    datacompy
