[metadata]
name = gdess
description = Comparison of simulated atmospheric CO2 against observational data
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel E Kaufman
author_email = daniel.kaufman@pnnl.gov
version = 1.0.beta1
classifiers =
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering

[options]
python_requires = >= 3.8
include_package_data = true
packages = find:
setup_requires =
    setuptools
install_requires =
    numpy>=1.21
    pandas>=1.1
    xarray>=0.18
    dask>=2021.7
    cftime>=1.5
    matplotlib>=3.3.2
    cartopy>=0.18
    adjusttext>=0.7.3
    intake>=0.6.2
    intake-esm>=2021
    gcsfs>=2021.6
    scipy>=1.5
    scikit-learn>=0.23
    tqdm
tests_require =
    pytest
    datacompy
